==> Beirdo/zephyr-adafruit-ssd1306/src/adafruit-ssd1306.c <==
#define DT_DRV_COMPAT solomon_ssd1306fb
#include <logging/log.h>
#include <zephyr.h>
#include <string.h>
#include <device.h>
#include <drivers/i2c.h>
#include <drivers/display.h>
#include "adafruit-ssd1306.h"
#include "utils.h"
#define draw_pixel(x, y) (cache_pixel(display_data.draw_cache, (x), (y)))
#define cache_pixel(cache, x, y) ((cache)[SSD1306_PIXEL_ADDR((x), (y))])

static void _ssd1306_command(uint8_t c) {
  // I2C message
  uint8_t control = 0x00;    // Co = 0, D/C = 0
	int ret = i2c_reg_write_byte(display_data.bus, display_data.i2c_addr,
	                             control, c);

	ARG_UNUSED(ret);
}

void SSD1306_startScrollRight(uint8_t start, uint8_t stop){
  _ssd1306_command(SSD1306_RIGHT_HORIZONTAL_SCROLL);
  _ssd1306_command(0x00);
  _ssd1306_command(start);
  _ssd1306_command(0x00);
  _ssd1306_command(stop);
  _ssd1306_command(0x00);
  _ssd1306_command(0xFF);
  _ssd1306_command(SSD1306_ACTIVATE_SCROLL);
}

void SSD1306_startScrollLeft(uint8_t start, uint8_t stop){
  _ssd1306_command(SSD1306_LEFT_HORIZONTAL_SCROLL);
  _ssd1306_command(0x00);
  _ssd1306_command(start);
  _ssd1306_command(0x00);
  _ssd1306_command(stop);
  _ssd1306_command(0x00);
  _ssd1306_command(0xFF);
  _ssd1306_command(SSD1306_ACTIVATE_SCROLL);
}

void SSD1306_startScrollDiagRight(uint8_t start, uint8_t stop){
  _ssd1306_command(SSD1306_SET_VERTICAL_SCROLL_AREA);
  _ssd1306_command(0x00);
  _ssd1306_command(SSD1306_LCDHEIGHT);
  _ssd1306_command(SSD1306_VERTICAL_AND_RIGHT_HORIZONTAL_SCROLL);
  _ssd1306_command(0x00);
  _ssd1306_command(start);
  _ssd1306_command(0x00);
  _ssd1306_command(stop);
  _ssd1306_command(0x01);
  _ssd1306_command(SSD1306_ACTIVATE_SCROLL);
}

void SSD1306_startScrollDiagLeft(uint8_t start, uint8_t stop){
  _ssd1306_command(SSD1306_SET_VERTICAL_SCROLL_AREA);
  _ssd1306_command(0x00);
  _ssd1306_command(SSD1306_LCDHEIGHT);
  _ssd1306_command(SSD1306_VERTICAL_AND_LEFT_HORIZONTAL_SCROLL);
  _ssd1306_command(0x00);
  _ssd1306_command(start);
  _ssd1306_command(0x00);
  _ssd1306_command(stop);
  _ssd1306_command(0x01);
  _ssd1306_command(SSD1306_ACTIVATE_SCROLL);
}

void SSD1306_stopScroll(void){
  _ssd1306_command(SSD1306_DEACTIVATE_SCROLL);
}

void SSD1306_dim(bool dim) {
  uint8_t contrast;

  if (dim) {
    contrast = 0; // Dimmed display
  } else {
    if (display_data.vccstate == SSD1306_EXTERNALVCC) {
      contrast = 0x9F;
    } else {
      contrast = 0xCF;
    }
  }
  
  // the range of contrast to too small to be really useful
  // it is useful to dim the display
  _ssd1306_command(SSD1306_SETCONTRAST);
  _ssd1306_command(contrast);
}

void SSD1306_display(void) {
  _ssd1306_command(SSD1306_COLUMNADDR);
  _ssd1306_command(0);                  // Column start address (0 = reset)
  _ssd1306_command(SSD1306_LCDWIDTH-1); // Column end address (127 = reset)

  _ssd1306_command(SSD1306_PAGEADDR);
  _ssd1306_command(0);                  // Page start address (0 = reset)
  _ssd1306_command((SSD1306_LCDHEIGHT >> 3) - 1); // Page end address

  uint8_t *cache = (display_data.show_logo ? (uint8_t *)lcd_logo : display_data.draw_cache);

  for (int16_t y = 0; y < SSD1306_LCDHEIGHT; y += 8) {
    for (uint8_t x = 0; x < SSD1306_LCDWIDTH; x += 16) {
      // Co = 0, D/C = 1
      int ret = i2c_burst_write(display_data.bus, display_data.i2c_addr,
                                0x40, &cache_pixel(cache, x, y), 16);
      ARG_UNUSED(ret);
    }
  }

  if (display_data.show_logo) {
    SSD1306_clearDisplay();
  }
}

void SSD1306_drawFastHLine(int16_t x, int16_t y, int16_t w, uint16_t color) {
  int bSwap = 0;
  switch(display_data.rotation) {
    case 0:
      // 0 degree rotation, do nothing
      break;
    case 1:
      // 90 degree rotation, swap x & y for rotation, then invert x
      bSwap = 1;
      _swap_int16(x, y);
      x = display_data.raw_width - x - 1;
      break;
    case 2:
      // 180 degree rotation, invert x and y - then shift y around for height.
      x = display_data.raw_width - x - 1;
      y = display_data.raw_height - y - 1;
      x -= (w-1);
      break;
    case 3:
      // 270 degree rotation, swap x & y for rotation, then invert y  and adjust y for w (not to become h)
      bSwap = 1;
      _swap_int16(x, y);
      y = display_data.raw_height - y - 1;
      y -= (w-1);
      break;
  }

  if(bSwap) {
    _drawFastVLineInternal(x, y, w, color);
  } else {
    _drawFastHLineInternal(x, y, w, color);
  }
}

void SSD1306_drawFastVLine(int16_t x, int16_t y, int16_t h, uint16_t color) {
  int bSwap = 0;
  switch(display_data.rotation) {
    case 0:
      break;
    case 1:
      // 90 degree rotation, swap x & y for rotation, then invert x and adjust x for h (now to become w)
      bSwap = 1;
      _swap_int16(x, y);
      x = display_data.raw_width - x - 1;
      x -= (h-1);
      break;
    case 2:
      // 180 degree rotation, invert x and y - then shift y around for height.
      x = display_data.raw_width - x - 1;
      y = display_data.raw_height - y - 1;
      y -= (h-1);
      break;
    case 3:
      // 270 degree rotation, swap x & y for rotation, then invert y
      bSwap = 1;
      _swap_int16(x, y);
      y = display_data.raw_height - y - 1;
      break;
  }

  if(bSwap) {
    _drawFastHLineInternal(x, y, h, color);
  } else {
    _drawFastVLineInternal(x, y, h, color);
  }
}
